--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eleventy-plugin-toc": "^1.1.5",
     "eslint": "latest",
     "htest.dev": "latest",
+    "jsep": "^1.3.8",
     "markdown-it-anchor": "^8.6.7",
     "release-it": "^17.0.0",
     "rollup": "^2.79.1",
