--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "@stylistic/eslint-plugin": "latest",
+    "@types/node": "^20.11.28",
     "@typescript-eslint/eslint-plugin": "latest",
     "@typescript-eslint/parser": "latest",
     "eleventy-plugin-toc": "^1.1.5",
